# agent-papers-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILLS.md  pyproject.toml
.claude/skills/deep-research/: SKILL.md
.claude/skills/fact-check/: SKILL.md
.claude/skills/literature-review/: SKILL.md
.claude/skills/research-coordinator/: SKILL.md
.github/workflows/: publish.yml
demo/: PLAN.md  claude-code-demo.tape  full-demo.tape  readme.tape  run-claude-code.sh  simulate-agent.sh  simulate-claude-code.sh
demo/remotion/: package-lock.json  package.json
demo/remotion/src/: DemoVideo.tsx  Root.tsx
demo/remotion/src/components/: ProgressBar.tsx  SceneBanner.tsx  SceneLabel.tsx  TerminalWindow.tsx
demo/remotion/src/scenes/: Intro.tsx  Outro.tsx  Transition.tsx
evals/: README.md  __main__.py  claude.py  common.py  compat.py  graders.py  prompts.py  pyproject.toml  run.py  sampler.py  tools.py  types.py
evals/benchmarks/: base.py  drb.py  healthbench.py  researchqa.py  sqa.py
evals/scripts/: run_all.sh
src/paper/: __init__.py  bibtex.py  cli.py  fetcher.py  highlighter.py  layout.py  models.py  parser.py  renderer.py  storage.py
src/search/: cli.py  config.py  models.py  renderer.py
src/search/backends/: browse.py  google.py  pubmed.py  semanticscholar.py
tests/: README.md  test_bibtex.py  test_cli.py  test_fetcher.py  test_highlighter.py  test_integration.py  test_layout.py  test_links.py  test_models.py  test_parser.py  test_storage.py
tests/search/: test_backends.py  test_cli.py  test_config.py  test_models.py  test_renderer.py
