[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-cli"
version = "0.1.0"
description = "A command-line tool for reading, skimming, and searching academic papers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "pysbd>=0.3",
    "rich>=13.0",
]

[project.scripts]
paper = "paper.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/paper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
