[project]
name = "paper-evals"
version = "0.1.0"
description = "Evaluation harness for paper/paper-search CLI tools"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "tqdm>=4.0",
    "tenacity>=8.0",
    "huggingface-hub>=0.20",
    "httpx>=0.27",
    "numpy>=1.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
